k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "10"
    field.cattle.io/publicEndpoints: '[{"addresses":["192.168.115.139","192.168.115.140","192.168.115.141","192.168.115.142"],"port":443,"protocol":"HTTPS","serviceName":"portfolio:portfolio","ingressName":"portfolio:portfolio","hostname":"portfolio.halawani.info","path":"/","allNodes":false}]'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"portfolio","namespace":"portfolio"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"portfolio"}},"template":{"metadata":{"labels":{"app":"portfolio"}},"spec":{"containers":[{"image":"ghcr.io/alhassanhalawani/portfolio:latest","livenessProbe":{"httpGet":{"path":"/healthz","port":8080},"initialDelaySeconds":10,"periodSeconds":20},"name":"portfolio","ports":[{"containerPort":8080}],"readinessProbe":{"httpG [...]
  creationTimestamp: "2025-08-09T12:50:03Z"
  generation: 11
  name: portfolio
  namespace: portfolio
  resourceVersion: "14972596"
  uid: 6ceed8ec-db9f-4048-b89f-06428a6f2cca
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: portfolio
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-08-09T15:33:47+01:00"
      creationTimestamp: null
      labels:
        app: portfolio
    spec:
      containers:
      - image: ghcr.io/alhassanhalawani/portfolio:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 1
        name: portfolio
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 101
          runAsUser: 101
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/cache/nginx
          name: cache
        - mountPath: /var/run
          name: run
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 101
        fsGroupChangePolicy: OnRootMismatch
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: cache
      - emptyDir: {}
        name: run
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2025-08-09T14:34:03Z"
    lastUpdateTime: "2025-08-09T14:34:03Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-08-09T14:26:30Z"
    lastUpdateTime: "2025-08-09T14:34:19Z"
    message: ReplicaSet "portfolio-7dd68d577b" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 11
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
